--- a/admin/dashboard.css
+++ b/admin/dashboard.css
@@ -111,6 +111,8 @@ body{
 
     transition: .5s;
 
+    overflow-y: scroll;
+
     z-index: 20;
 }
 #main .content{
@@ -126,6 +128,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
 
     width: 78%;
 }
@@ -157,5 +160,6 @@ body{
 #book-list{
     width: 100%;
     margin-top: 48px;
+    padding-bottom: 100px;
 }
 /* AKHIR INSERT BUKU */
